--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.26.1",
     "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0"
