--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
+  "resolutions": {
+    "source-map": "^0.8.0-beta.0"
+  },
   "dependencies": {
     "gatsby": "^2.32.11",
     "gatsby-plugin-manifest": "^2.12.0",
@@ -20,7 +23,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "source-map": "^0.8.0-beta.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
